POWR-781 Fix content spacing

--- a/web/themes/custom/cloudy/scss/components/_card.scss
+++ b/web/themes/custom/cloudy/scss/components/_card.scss
@@ -63,5 +63,4 @@
   display: flex;
   flex: 2;
   flex-direction: column;
-  justify-content: space-between;
 }
